Deprecation: replace new Double(double) with Double.valueOf(double)